# betting-test-task

./: README.md  docker-compose.yaml
bet_maker/: .env  Dockerfile  alembic.ini  docker-compose.unittest.yaml  docker-compose.yaml  main.py  pyproject.toml
bet_maker/alembic/versions/: 0001_bet_model.py
bet_maker/deploy/: nginx.conf
bet_maker/deploy/scripts/: start  unittest
bet_maker/src/bet/: enums.py  exceptions.py  model.py  repo.py  router.py  schemas.py  service.py
bet_maker/src/bet/api/v1/: endpoints.py  schemas.py
bet_maker/src/common/: configs.py  constants.py  exceptions.py  repo.py  router.py
bet_maker/src/common/cache/: client.py  repo.py
bet_maker/src/common/db/: db_base.py
bet_maker/src/event/: constants.py  enums.py  exceptions.py  repo.py  router.py  schemas.py  service.py
bet_maker/src/event/api/v1/: endpoints.py  schemas.py
bet_maker/src/tests/: conftest.py  dependency_overrides.py
bet_maker/src/tests/bet/: test_repo.py  test_service.py
bet_maker/src/tests/bet/api/: test_v1.py
bet_maker/src/tests/event/: test_service.py
bet_maker/src/tests/event/api/: test_v1.py
line_provider/: .env  docker-compose.unittest.yaml  docker-compose.yaml  main.py  setup.cfg
line_provider/alembic/: env.py
line_provider/alembic/versions/: 0001_event_model.py
line_provider/deploy/: nginx.conf
line_provider/deploy/scripts/: start
line_provider/src/common/: configs.py  decorators.py  enums.py  repo.py  router.py  schemas.py
line_provider/src/event/: enums.py  exceptions.py  model.py  repos.py  schemas.py  service.py
(+8 files in other folders)
