[tool.poetry]
name = "line provider"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
redis = "^5.0.3"
alembic = "^1.13.1"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
phonenumbers = "^8.13.34"
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
coverage = "^7.4.4"
pytest-asyncio = "^0.23.6"
pytest-trio = "^0.8.0"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
minio = "^7.2.5"
boto3 = "^1.34.92"
mypy-boto3-s3 = "^1.34.91"
boto3-stubs = "^1.34.92"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.5"
no-implicit-optional = "^1.4"
types-redis = "^4.6.0.20240417"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'


[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"